# bluez-alsa

./: configure.ac
src/: Makefile.am  at.c  bluealsa.h  bluez-a2dp.c  bluez.c  ctl.c  ctl.h  io.c  io.h  main.c  ofono.c  rfcomm.c  transport.c  transport.h  utils.c
src/asound/: 20-bluealsa_proxy.conf  Makefile.am  README.md  bluealsa-ctl.c  bluealsa-pcm-proxy.c  bluealsa-pcm.c  bluezalsa.pc.in
src/bluealsalib/: Makefile.am  bluealsa.c  bluealsa.h  bluealsalib.pc.in  test_lib.c
src/shared/: ctl-client.c  ctl-client.h  ffb.c  log.c  log.h  rt.c
